motifly vistors_ btn

--- a/visitors3.html
+++ b/visitors3.html
@@ -144,10 +144,11 @@
                 </div>
                 <div class="floor_btn">
                     <ul>
-                        <li><a href="#">B1</a></li>
-                        <li><a href="#">B1</a></li>
-                        <li><a href="#">B1</a></li>
-                        <li><a href="#">B1</a></li>
+                        <a href="#"><li>B1</li></a>
+                        <a href="#"><li>1F</li></a>
+                        <a href="#"><li>4F</li></a>
+                        <a href="#"><li>6F</li></a>
+                        <a href="#"><li>7F</li></a>
                     </ul>
                 </div>
 
