footer add faq btn

--- a/conference-room_item7.html
+++ b/conference-room_item7.html
@@ -293,7 +293,14 @@
                         </div>
                     </div>
                 </div>
-                <div class="copyright"> 台北南港展覽館2館 Copyright © 2018 Taipei Nangang Exhibition Center, Hall 2. All Rights Reserved. </div>
+                <div class="footer_faq">
+            <ul>
+                <li><a href="faq1.html">常見問題</a></li>
+                <li>｜</li>
+                <li><a href="links.html">相關連結</a></li>
+            </ul>
+        </div>
+        <div class="copyright"> 台北南港展覽館2館 Copyright © 2018 Taipei Nangang Exhibition Center, Hall 2. All Rights Reserved. </div>
             </div>
         </footer>
     </div>
