--- a/conference-room_item4.html
+++ b/conference-room_item4.html
@@ -128,31 +128,20 @@
                 <div class="news_continer">
                     <div class="step_four">
                         <div class="step_bg stepblue_deep">
-                            <div class="step_title">請詳閱「會議室租用流程」、「實施規範」、「收費基準」。</div>
-                            <ul>
-                                <li><a href="#">會議室租用流程下載</a></li>
-                                <li><a href="#">實施規範下載</a></li>
-                                <li><a href="#">收費基準下載</a></li>
-                            </ul>
+                            <div class="step_one"><img src="images/step.svg"></div>
+                            <div class="step_title">1.請詳閱「會議室租用流程」、「實施規範」、「收費基準」。</div>
                         </div>
-                        <div class="step_bg"><img src="images/next.svg"></div>
                         <div class="step_bg stepblue">
-                            <div class="step_title">使用「空檔查詢」、「場租試算」。</div>
-                            <ul>
-                                <li><a href="#">空檔查詢 下載</a></li>
-                                <li><a href="#">場租試算 下載</a></li>
-                            </ul>
+                            <div class="step_one"><img src="images/step2.svg"></div>
+                            <div class="step_title">2.使用「空檔查詢」、「場租試算」</div>
                         </div>
-                        <div class="step_bg"><img src="images/next.svg"></div>
                         <div class="step_bg stepblue">
+                            <div class="step_one"><img src="images/step3.svg"></div>
                             <div class="step_title">洽承辦人員預定場地。</div>
                         </div>
-                        <div class="step_bg"><img src="images/next.svg"></div>
                         <div class="step_bg stepblue">
-                            <div class="step_title">「借用申請表」及報價單簽名後回傳。</div>
-                            <ul>
-                                <li><a href="#">借用申請表 下載</a></li>
-                            </ul>
+                            <div class="step_one"><img src="images/step4.svg"></div>
+                            <div class="step_title">4.「借用申請表」及報價單簽名後回傳。</div>
                         </div>
 
                     </div>
