--- a/conference-room_item4.html
+++ b/conference-room_item4.html
@@ -127,13 +127,13 @@
 
                 <div class="news_continer">
                     <div class="step_four">
-                        <div class="step_bg stepblue_deep">
+                        <div class="step_bg stepblue">
                             <div class="step_one"><img src="images/step.svg"></div>
-                            <div class="step_title">1.請詳閱「會議室租用流程」、「實施規範」、「收費基準」。</div>
+                            <div class="step_title">1.請詳閱「<a href="#">會議室租用流程</a>」、「<a href="#">實施規範</a>」、「<a href="#">收費基準</a>」。</div>
                         </div>
                         <div class="step_bg stepblue">
                             <div class="step_one"><img src="images/step2.svg"></div>
-                            <div class="step_title">2.使用「空檔查詢」、「場租試算」</div>
+                            <div class="step_title">2.使用「<a href="#">空檔查詢</a>」、「<a href="#">場租試算</a>」</div>
                         </div>
                         <div class="step_bg stepblue">
                             <div class="step_one"><img src="images/step3.svg"></div>
@@ -141,7 +141,7 @@
                         </div>
                         <div class="step_bg stepblue">
                             <div class="step_one"><img src="images/step4.svg"></div>
-                            <div class="step_title">4.「借用申請表」及報價單簽名後回傳。</div>
+                            <div class="step_title">4.「<a href="#">借用申請表</a>」及報價單簽名後回傳。</div>
                         </div>
 
                     </div>
