--- a/organizers_item6.html
+++ b/organizers_item6.html
@@ -147,18 +147,21 @@
                 <div class="news_continer">
                     <div class="mod-organizer_title ">申請流程:</div>
                     <div class="step">
-                        <div class="step_bg stepblue_deep">
-                            <div class="step_title">南港展覽館1館借用合約.zip</div>
-                            <ul>
-                                <li><a href="#">實施規範</a></li>
-                                <li><a href="#">展場注意事項</a></li>
-                                <li><a href="#">裝潢作業規範</a></li>
-                            </ul>
-                        </div>
-                        <div class="step_bg"><img src="images/next.svg"></div>
                         <div class="step_bg stepblue">
+                            <div class="step_one"><img src="images/step.svg"></div>
+                            <div class="step_title">
+                                南港展覽館1館借用合約.zip</br>
+                                <a href="#">實施規範</a></br>
+                                <a href="#">展場注意事項</a></br>
+                                <a href="#">裝潢作業規範</a></br>
+                            </div>
+                        </div>
+                        <div class="step_bg stepblue">
+                            <div class="step_one"><img src="images/step2.svg"></div>
                             <div class="step_title">「展場預約申請表」填寫後email外借組莫非小姐mo@taitra.org.tw (分機：2670)</div>
                         </div>
+
+
 
                     </div>
                     <div class="mod-organizer_title ">請下載附件後詳閱並遵守</div>
