add organizers item7

--- a/index.html
+++ b/index.html
@@ -94,12 +94,10 @@
                 <a href="#"><div class="fast_icon"><img src="images/ke_04.svg"></div></a>
                 <div class="fast_font"><a href="#">南港1館</a></div>
                 <a href="#"><div class="fast_icon"><i class="mdi mdi-calendar"></i></div></a>
-                <div class="fast_font"><a href="#">展會活動</a></div>
+                <div class="fast_font"><a href="calendar.html">展會活動</a></div>
                 <a href="#"><div class="fast_icon"><i class="mdi mdi-email"></i></div></a>
                 <div class="fast_font"><a href="#">聯絡我們</a></div>
             </div>
-
-
         </div>
 
         <section>
@@ -175,8 +173,8 @@
                     <div class="rent_linehouse"><img src="images/linetwt.svg"></div>
                     <div class="rent_continer">
                         <div class="rent_big_title">租借場地</div>
-                        <div class="rent_font">台北南港展覽館1館為全台首座專業化大型雙層展覽館</br>
-                            打造一個安全、舒適、便利、人本與環保的環境。</div>
+                        <div class="rent_font">台北南港展覽2館擁有專業化的大型場地空間，提供展覽空間、會議舉辦、各式活動的需求
+</div>
 
                         <div class="rentpace">
                             <div class="pace_box">
