--- a/organizers_item7.html
+++ b/organizers_item7.html
@@ -92,19 +92,22 @@
                 <div class="m-page-headerbg"></div>
                 <div class="m-page-left_bg"><img src="images/pagebg.svg">
                     <div class="m-page_font">
-                        <div class="page_headtitle">展覽活動一覽</div>
-                        <div class="page_headtext">南港展覽館2館活動展覽檔期表</div>
+                        <div class="page_headtitle">展覽會場</div>
+                        <div class="page_headtext">台北南港展覽館2館共有三個展覽空間，可規劃之標準攤位數達2146格
+</div>
                     </div>
                 </div>
 
             </div>
             <div class="m-page_wrapper">
-                <div class="breadcrumb_title">展覽活動一覽</div>
+                <div class="breadcrumb_title">展覽申請</div>
                 <div class="twtbreadcrumb">
                     <ul>
                         <li><a href="index.html">首頁</a></li>
                         <li>/</li>
-                        <li class="activeddd">展覽活動一覽</li>
+                        <li><a href="organizers.html">租借場地</a></li>
+                        <li>/</li>
+                        <li class="activeddd">展覽會場</li>
                     </ul>
                 </div>
             </div>
@@ -112,111 +115,80 @@
             <div class="orang_wrapper">
                 <div class="orang_tab">
                     <ul>
-                        <li class="active">全部</li>
-                        <li>展覽</li>
-                        <li>會議及活動</li>
-                    <ul>
+                        <a href="organizers_item1.html"><li>基本資訊</li></a>
+                        <a href="organizers_item2.html"><li>一樓展場</li></a>
+                        <a href="organizers_item3.html"><li>四樓展場</li></a>
+                        <a href="organizers_item4.html"><li>內部實景</li></a>
+                        <a href="organizers_booking_calendar.html"><li>空檔查詢</li></a>
+                        <a href="organizers_item6.html"><li>展覽申請</li></a>
+                        <a href="#"><li>活動申請</li></a>
+                        <!-- <a href="#"><li>尾牙方案</li></a> -->
+                        <a href="hall2.html"><li>南港一館</li></a>
+                        <a href="organizers_item5.html"><li>交通及停車場</li></a>
+                        <a href="organizers_item6.html"><li class="active">展覽申請</li></a>
+                    </ul>
                 </div>
+
+
 
                 <div class="news_continer">
-                    <div class="calen-list">
-                        <div class="calen-card-box">
-                            <div class="calen-card_vrte">
-                                <div class="calen-card_head">
-                                    <div class="calen-pic"><img src="images/event.jpg"></div>
-                                    <div class="calen-card_tab news_blue">展覽</div>
-                                </div>
-                            </div>
-                            <div class="calen-card_issuse">
-                                <div class="calen-card_date">7/5-7/9</div>
-                                <div class="calen-title">2018台北寵物用品展</div>
-                                <div class="calen-font">200坪至1,058坪的多元選擇，交通便捷的地理位置，東區門戶計畫的新亮點...<a href="#">繼續閱讀</a></div>
-
+                    <div class="mod-organizer_title ">申請流程:</div>
+                    <div class="step">
+                        <div class="step_bg stepblue">
+                            <div class="step_one"><img src="images/step.svg"></div>
+                            <div class="step_title">
+                                南港展覽館1館借用合約.zip</br>
+                                <a href="#">實施規範</a></br>
+                                <a href="#">展場注意事項</a></br>
+                                <a href="#">裝潢作業規範</a></br>
                             </div>
                         </div>
-                        <div class="calen-card-box">
-                            <div class="calen-card_vrte">
-                                <div class="calen-card_head">
-                                    <div class="calen-pic"><img src="images/event.jpg"></div>
-                                    <div class="calen-card_tab news_blue">展覽</div>
-                                </div>
-                            </div>
-                            <div class="calen-card_issuse">
-                                <div class="calen-card_date">7/5-7/9</div>
-                                <div class="calen-title">2018台北寵物用品展</div>
-                                <div class="calen-font">200坪至1,058坪的多元選擇，交通便捷的地理位置，東區門戶計畫的新亮點...<a href="#">繼續閱讀</a></div>
-                            </div>
+                        <div class="step_bg stepblue">
+                            <div class="step_one"><img src="images/step2.svg"></div>
+                            <div class="step_title">「展場預約申請表」填寫後email外借組莫非小姐mo@taitra.org.tw (分機：2670)</div>
                         </div>
-                        <div class="calen-card-box">
-                            <div class="calen-card_vrte">
-                                <div class="calen-card_head">
-                                    <div class="calen-pic"><img src="images/event.jpg"></div>
-                                    <div class="calen-card_tab news_yellow">會議及活動</div>
-                                </div>
-                            </div>
-                            <div class="calen-card_issuse">
-                                <div class="calen-card_date">7/5-7/9</div>
-                                <div class="calen-title">2018台北寵物用品展</div>
-                                <div class="calen-font">200坪至1,058坪的多元選擇，交通便捷的地理位置，東區門戶計畫的新亮點...<a href="#">繼續閱讀</a></div>
-                            </div>
-                        </div>
-                        <div class="calen-card-box">
-                            <div class="calen-card_vrte">
-                                <div class="calen-card_head">
-                                    <div class="calen-pic"><img src="images/event.jpg"></div>
-                                    <div class="calen-card_tab news_yellow">會議及活動</div>
-                                </div>
-                            </div>
-                            <div class="calen-card_issuse">
-                                <div class="calen-card_date">7/5-7/9</div>
-                                <div class="calen-title">2018台北寵物用品展</div>
-                                <div class="calen-font">200坪至1,058坪的多元選擇，交通便捷的地理位置，東區門戶計畫的新亮點...<a href="#">繼續閱讀</a></div>
-                            </div>
-                        </div>
-                        <div class="calen-card-box">
-                            <div class="calen-card_vrte">
-                                <div class="calen-card_head">
-                                    <div class="calen-pic"><img src="images/event.jpg"></div>
-                                    <div class="calen-card_tab news_blue">展覽</div>
-                                </div>
-                            </div>
-                            <div class="calen-card_issuse">
-                                <div class="calen-card_date">7/5-7/9</div>
-                                <div class="calen-title">2018台北寵物用品展</div>
-                                <div class="calen-font">200坪至1,058坪的多元選擇，交通便捷的地理位置，東區門戶計畫的新亮點...<a href="#">繼續閱讀</a></div>
-                            </div>
-                        </div>
-                        <div class="calen-card-box">
-                            <div class="calen-card_vrte">
-                                <div class="calen-card_head">
-                                    <div class="calen-pic"><img src="images/event.jpg"></div>
-                                    <div class="calen-card_tab news_blue">展覽</div>
-                                </div>
-                            </div>
-                            <div class="calen-card_issuse">
-                                <div class="calen-card_date">7/5-7/9</div>
-                                <div class="calen-title">2018台北寵物用品展</div>
-                                <div class="calen-font">200坪至1,058坪的多元選擇，交通便捷的地理位置，東區門戶計畫的新亮點...<a href="#">繼續閱讀</a></div>
-                            </div>
-                        </div>
-
 
 
 
                     </div>
-                    <div class="page_all">
-                        <ul>
-                            <li><</li>
-                            <li class="active">1</li>
-                            <li>2</li>
-                            <li>3</li>
-                            <li>4</li>
-                            <li>5</li>
-                            <li>...</li>
-                            <li>></li>
-                        <ul>
+                    <div class="mod-organizer_title ">請下載附件後詳閱並遵守</div>
+                    <div class="download_word">
+                        <div class="wod_box word_color"><i class="mdi mdi-file-pdf"></i><a href="#">裝潢作業規範</a></div>
+                        <a href="#">
+                            <div class="down_boxright">下載</div>
+                        </a>
                     </div>
+                    <div class="download_word">
+                        <div class="wod_box word_color"><i class="mdi mdi-file-pdf"></i><a href="#">防焰裝修需知</a></div>
+                        <a href="#">
+                            <div class="down_boxright">下載</div>
+                        </a>
+                    </div>
+                    <div class="download_word">
+                        <div class="wod_box word_color"><i class="mdi mdi-file-pdf"></i><a href="#">包柱裝潢及重車入場相關規定說明</a></div>
+                        <a href="#">
+                            <div class="down_boxright">下載</div>
+                        </a>
+                    </div>
+                    <div class="download_word">
+                        <div class="wod_box word_color"><i class="mdi mdi-file-pdf"></i><a href="#">車輛行駛安全須知</a></div>
+                        <a href="#">
+                            <div class="down_boxright">下載</div>
+                        </a>
+                    </div>
+
+
+
+
+                    <div class="download_word">
+                        <div class="wod_box word_color"><i class="mdi mdi-file-pdf"></i><a href="#">外貿協會台北南港展覽館1館展覽作業手冊</a></div>
+                        <a href="#">
+                            <div class="down_boxright">下載</div>
+                        </a>
+                    </div>
+
                 </div>
+
 
 
             </div>
