--- a/conference-room_item4.html
+++ b/conference-room_item4.html
@@ -145,7 +145,8 @@
                         </div>
 
                     </div>
-                    <div class="mod-organizer_title ">更多資訊請洽 :886-2-2725-5200 分機5527。</br>參展廠商租用會議室請洽展覽主辦單位。</div>
+                    <div class="safety_article">更多資訊請洽 : 886-2-2725-5200 分機5527。</div>
+
 
                 </div>
 
