--- a/conference-room_item7.html
+++ b/conference-room_item7.html
@@ -124,7 +124,8 @@
                     </ul>
                 </div>
                 <div class="mod-organizer_title">會議設備</div>
-                <div class="safety_article">天花板單槍投影機（3,500流明） NTD. 3,500/時段(未稅)</br>音源輸出/入 NTD. 1,000/時段(未稅)</div>
+                <div class="safety_article">本館提供各式會議所需的設備租用，以利租用方進行使用，使會議活動順利進行</br></br>更多會議設備請參考?</br>外貿協會台北南港展覽館2館會議室設備借用收費基準暨申請表
+                </div>
                 <div class="download_word">
                     <div class="wod_box word_color"><i class="mdi mdi-file-pdf"></i><a href="#">外貿協會台北南港展覽館1館會議室設備借用收費基準暨申請表</a></div>
                     <a href="#"><div class="down_boxright">下載</div></a>
@@ -231,7 +232,7 @@
                 <div class="safety_article margintop_title">南港展覽館展會服務組電話886-2-2725-5200 會議室茶點聯絡人： 林家豪 (分機5539)、曾冠瑜 (分機5533)</div>
 
 
-
+                    <div class="line_gray"></div>
                 <div class="mod-organizer_title">用電申請</div>
                 <div class="safety_article">如須使用外接電源，請填寫申請表後回傳。</div>
                 <div class="download_word">
