--- a/organizers_item7.html
+++ b/organizers_item7.html
@@ -93,7 +93,8 @@
                 <div class="m-page-left_bg"><img src="images/pagebg.svg">
                     <div class="m-page_font">
                         <div class="page_headtitle">展覽會場</div>
-                        <div class="page_headtext">台北南港展覽館2館共有三個展覽空間，可規劃之標準攤位數達2146格
+                        <div class="page_headtext">台北南港展覽2館提供三個展覽空間(1F 、 4F 、 7F) ，可依需求完成各式活動規劃，適合(演唱會、藝文表演…)
+
 </div>
                     </div>
                 </div>
@@ -121,7 +122,7 @@
                         <a href="organizers_item4.html"><li>內部實景</li></a>
                         <a href="organizers_booking_calendar.html"><li>空檔查詢</li></a>
                         <a href="organizers_item6.html"><li>展覽申請</li></a>
-                        <a href="#"><li>活動申請</li></a>
+                        <a href="organizers_item7.html"><li>活動申請</li></a>
                         <!-- <a href="#"><li>尾牙方案</li></a> -->
                         <a href="hall2.html"><li>南港一館</li></a>
                         <a href="organizers_item5.html"><li>交通及停車場</li></a>
@@ -137,55 +138,26 @@
                         <div class="step_bg stepblue">
                             <div class="step_one"><img src="images/step.svg"></div>
                             <div class="step_title">
-                                南港展覽館1館借用合約.zip</br>
-                                <a href="#">實施規範</a></br>
-                                <a href="#">展場注意事項</a></br>
-                                <a href="#">裝潢作業規範</a></br>
+                                1. 「<a href="#">活動借用流程</a>」、 「<a href="#">收費基準</a>」請詳閱。
                             </div>
                         </div>
                         <div class="step_bg stepblue">
                             <div class="step_one"><img src="images/step2.svg"></div>
-                            <div class="step_title">「展場預約申請表」填寫後email外借組莫非小姐mo@taitra.org.tw (分機：2670)</div>
+                            <div class="step_title">2. 「<a href="#">活動預約申請表</a>」：請依主辦單位不同分別下戴，填寫後回傳。</br>
+                            活動預約申請表－單一主辦單位</br>
+                            活動預約申請表－含協辦單位</br>
+                            </div>
+                        </div>
+                        <div class="step_bg stepblue">
+                            <div class="step_one"><img src="images/step3.svg"></div>
+                            <div class="step_title">3. 「<a href="#">借用合約</a>」簽訂。
+                            </div>
                         </div>
 
 
 
                     </div>
-                    <div class="mod-organizer_title ">請下載附件後詳閱並遵守</div>
-                    <div class="download_word">
-                        <div class="wod_box word_color"><i class="mdi mdi-file-pdf"></i><a href="#">裝潢作業規範</a></div>
-                        <a href="#">
-                            <div class="down_boxright">下載</div>
-                        </a>
-                    </div>
-                    <div class="download_word">
-                        <div class="wod_box word_color"><i class="mdi mdi-file-pdf"></i><a href="#">防焰裝修需知</a></div>
-                        <a href="#">
-                            <div class="down_boxright">下載</div>
-                        </a>
-                    </div>
-                    <div class="download_word">
-                        <div class="wod_box word_color"><i class="mdi mdi-file-pdf"></i><a href="#">包柱裝潢及重車入場相關規定說明</a></div>
-                        <a href="#">
-                            <div class="down_boxright">下載</div>
-                        </a>
-                    </div>
-                    <div class="download_word">
-                        <div class="wod_box word_color"><i class="mdi mdi-file-pdf"></i><a href="#">車輛行駛安全須知</a></div>
-                        <a href="#">
-                            <div class="down_boxright">下載</div>
-                        </a>
-                    </div>
-
-
-
-
-                    <div class="download_word">
-                        <div class="wod_box word_color"><i class="mdi mdi-file-pdf"></i><a href="#">外貿協會台北南港展覽館1館展覽作業手冊</a></div>
-                        <a href="#">
-                            <div class="down_boxright">下載</div>
-                        </a>
-                    </div>
+                    <div class="mod-organizer_title ">更多資訊請洽:886-2-2725-5200 分機: 5526</div>
 
                 </div>
 
