--- a/organizers_item3.html
+++ b/organizers_item3.html
@@ -122,7 +122,7 @@
                         <a href="organizers_item6.html"><li>展覽申請</li></a>
                         <a href="organizers_item7.html"><li>活動申請</li></a>
                         <!-- <a href="#"><li>尾牙方案</li></a> -->
-                        <a href="#"><li>南港一館</li></a>
+                        <a href="hall2.html"><li>南港一館</li></a>
                         <a href="organizers_item5.html"><li>交通及停車場</li></a>
                         <a href="organizers_item6.html"><li>展覽申請</li></a>
                     </ul>
