--- a/public_space.html
+++ b/public_space.html
@@ -123,6 +123,25 @@
                 <div class="news_continer">
                     <div class="widget-pic"><img src="images/bgLeft.jpg"></div>
                     <div class="mod-organizer_title margintop_title">洽詢貿協會台北南港展覽館 2館公共空間借用流程：</div>
+
+                    <div class="step">
+                        <div class="step_bg stepblue">
+                            <div class="step_one"><img src="images/step.svg"></div>
+                            <div class="step_title">
+                                「借用收費基準及實施規範」請詳閱：<br>
+                                【單獨租用】公共空間收費基準及實施規範
+
+                            </div>
+                        </div>
+                        <div class="step_bg stepblue">
+                            <div class="step_one"><img src="images/step2.svg"></div>
+                            <div class="step_title">「公共空間申請表」請依需求下載後回傳：
+                            【其他】公共空間申請表<br>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="safety_article">與專員連絡：電話: 886-2-2725-5200  分機:  5526</div>
+
                     <div class="mod-organizer_title ">1.「借用收費基準及實施規範」請詳閱：</div>
                     <div class="download_word">
                         <div class="wod_box word_color"><i class="mdi mdi-file-pdf"></i><a href="#">【單獨租用】公共空間收費基準及實施規範</a></div>
@@ -133,7 +152,7 @@
                         <div class="wod_box word_color"><i class="mdi mdi-file-pdf"></i><a href="#">【其他】公共空間申請表</a></div>
                         <a href="#"><div class="down_boxright">下載</div></a>
                     </div>
-                    <div class="safety_article">與專員連絡：電話: 886-2-2725-5200  分機:  5526</div>
+
                 </div>
 
 
