--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
                                             </ul>
                                         </div>
                                     </a>
-                                    <a href="#">
+                                    <a href="transportation1.html">
                                         <div class="ubike_btn">
                                             <ul>
                                                 <li><img src="images/bus6.svg"></li>
@@ -309,7 +309,7 @@
 
                                 <div class="goto_viewd">
                                     <ul>
-                                        <li><img src="images/vricon.svg"></li>
+                                        <li><a href="#"><img src="images/vricon.svg"></a></li>
                                         <li>台北南港展覽館2館</li>
                                     </ul>
                                 </div>
