--- a/organizers_item3.html
+++ b/organizers_item3.html
@@ -192,7 +192,7 @@
                 <div class="widget-pic"><img src="images/biew.jpg"></div>
                 <div class="mod-organizer_title">一樓展場平面圖</div>
 
-                <div class="widget-pic"><img src="images/hallplan.jpg"></div>
+                <div class="widget-pic"><img src="images/hallplan2.jpg"></div>
             </div>
 
         </article>
