--- a/public_space3.html
+++ b/public_space3.html
@@ -140,8 +140,8 @@
                         <div class="public_view">
                             <div class="public_bg">
                                 <div class="public_pic">
-                                    <div class="pub_tag">四樓</div>
-                                    <img src="images/publie_space01.jpg">
+                                    <div class="pub_tag">7樓</div>
+                                    <img src="images/20.jpg">
                                 </div>
                                 <div class="public_title">公共空間平面圖 </div>
                             </div>
@@ -149,8 +149,8 @@
                         <div class="public_view">
                             <div class="public_bg">
                                 <div class="public_pic">
-                                    <div class="pub_tag">六樓</div>
-                                    <img src="images/publie_space01.jpg">
+                                    <div class="pub_tag">1樓</div>
+                                    <img src="images/20-1.jpg">
                                 </div>
                                 <div class="public_title">公共空間平面圖 </div>
                             </div>
@@ -158,39 +158,13 @@
                         <div class="public_view">
                             <div class="public_bg">
                                 <div class="public_pic">
-                                    <div class="pub_tag">七樓</div>
-                                    <img src="images/publie_space01.jpg">
+                                    <div class="pub_tag">4樓</div>
+                                    <img src="images/20-2.jpg">
                                 </div>
                                 <div class="public_title">公共空間平面圖 </div>
                             </div>
                         </div>
-                        <div class="public_view">
-                            <div class="public_bg">
-                                <div class="public_pic">
-                                    <div class="pub_tag">四樓</div>
-                                    <img src="images/publie_space01.jpg">
-                                </div>
-                                <div class="public_title">公共空間平面圖 </div>
-                            </div>
-                        </div>
-                        <div class="public_view">
-                            <div class="public_bg">
-                                <div class="public_pic">
-                                    <div class="pub_tag">六樓</div>
-                                    <img src="images/publie_space01.jpg">
-                                </div>
-                                <div class="public_title">公共空間平面圖 </div>
-                            </div>
-                        </div>
-                        <div class="public_view">
-                            <div class="public_bg">
-                                <div class="public_pic">
-                                    <div class="pub_tag">七樓</div>
-                                    <img src="images/publie_space01.jpg">
-                                </div>
-                                <div class="public_title">公共空間平面圖 </div>
-                            </div>
-                        </div>
+
                     </div>
                 </div>
 
