--- a/aboutus7.html
+++ b/aboutus7.html
@@ -131,8 +131,8 @@
                         <a href="aboutus.html"><li>內部實景</li></a>
                         <a href="aboutus2.html"><li>展館位置</li></a>
                         <a href="aboutus3.html"><li>關於展館</li></a>
-                        <a href="aboutus4.html"><li>綠色展館</li></a>
-                        <a href="aboutus5.html"><li>公共藝術</li></a>
+                        <!-- <a href="aboutus4.html"><li>綠色展館</li></a> -->
+                        <!-- <a href="aboutus5.html"><li>公共藝術</li></a> -->
                         <a href="aboutus6.html"><li>認證標章</li></a>
                         <a href="aboutus7.html"><li class="active">經營者</li></a>
                         <a href="aboutus8.html"><li>展館剪影</li></a>
