--- a/advertisements_ad.html
+++ b/advertisements_ad.html
@@ -132,7 +132,7 @@
                 <div class="orang_tab">
                     <ul>
                         <a href="advertisements_ad.html"><li class="active">廣告點位</li></a>
-                        <a href="advertisements_led.html"><li>200吋LED</li></a>
+                        <!-- <a href="advertisements_led.html"><li>200吋LED</li></a> -->
                         <!-- <a href="advertisements_electronic_board.html"><li>電子看板</li></a> -->
                     </ul>
                 </div>
