--- a/index.html
+++ b/index.html
@@ -121,7 +121,8 @@
                 <div class="idx_banner">
                     <div class="bnmask"><img src="images/bn_mask.png"></div>
                     <div class=video-container>
-                        <iframe src="https://www.youtube.com/embed/WTHr9uDGO18" frameborder="0" allowfullscreen></iframe>
+                        <!-- <iframe src="https://www.youtube.com/embed/WTHr9uDGO18" frameborder="0" allowfullscreen></iframe> -->
+                        <img src="images/1.png">
                     </div>
                 </div>
                 <div class="ento_bg">
