aboutus 2 add google map

--- a/aboutus2.html
+++ b/aboutus2.html
@@ -141,7 +141,8 @@
                 </div>
 
                 <div class="news_continer">
-                    <div class="widget-pic"><img src="images/aboutmap.jpg"></div>
+                
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3614.3358961575072!2d121.61592731500669!3d25.056601983961745!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3442ab57f02092dd%3A0x87862fa2121f7e46!2z5Y2X5riv5bGV6Ka96aSo!5e0!3m2!1szh-TW!2stw!4v1535596721677" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
                 </div>
 
 
